Attempt to fix overflow hero bug

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,6 +1,5 @@
 .hero {
   height: calc(100vh - var(--navbarHeight));
-  width: 100vw;
   position: relative;
   z-index: -1;
   overflow-x: hidden;
